# auto_claude

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  TODO.md  agent.py  envision.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_agent.sh  task_detector.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  envision.yml  scheduler.yml
tests/: __init__.py  test_agent.py  test_task_detector.py
